# drtb_projections_modelling

./: .gitignore  .streamlit-ignore  AUTHORS.md  AUTO_REFRESH_COMPLETED.txt  CLIMATE_TB_RESEARCH_FRAMEWORK_COMPLETION_STATUS.md  CRITICAL_ISSUES_IDENTIFIED.md  ENHANCEMENT_COMPLETION_REPORT.md  FINAL_ACTION_PLAN.md  FINAL_COMPLETION_REPORT.md  FINAL_FILE_LOCATIONS.md  FINAL_MANUSCRIPT_COMPLETE.md  FORMATTING_VERIFICATION.md  Figures_and_Tables.md  Figures_and_Tables_Final_V3.docx  Figures_and_Tables_Final_V4.docx  Figures_and_Tables_Final_V5.docx  Figures_and_Tables_V2.md  Figures_and_Tables_V3.md  GIT_SETUP_COMPLETE.md  IJMR_Submission_DRTB_Forecast_India_2025_Final_v2.docx  LICENSE  MANUSCRIPT_UPDATE_COMPLETE.md  MANUSCRIPT_UPDATE_REQUIREMENTS.md  MANUSCRIPT_VERIFICATION_REPORT.md  README.md  REFERENCE_CITATION_STATUS.md  REPO_DATA_SUMMARY.md  STREAMLIT_DEPLOYMENT_README.md  Supplementary_and_Submission.md  TABLES_FIGURES_COMPLETE.md  audit_final_report.md  authentic_drtb_forecast_report_india_2025.md  complete_drtb_manuscript_india_2025.md  consolidate_figures.py  create_synthetic_tb_demo_data.py  dashboard_app.py  enhance_figure_4.py  extract_mdr_data.py  extract_mdr_outcomes.py  final_comprehensive_manuscript.md  (+30 more)
MDR TB WHO data/: RELAY_TB_DATA (1).csv  (+38 more)
tb_amr_project/: LICENSE  README.md  packages.txt  pyproject.toml  requirements.txt  run.py  run_shapefile_demo.bat
tb_amr_project/pipeline/: icmr_connector.py  models.py  tb_dashboard.py  tb_forecast.py  tb_manuscript.py  tb_sensitivity.py  tb_visualization.py
tb_amr_project/plots/: india_mdr_choropleth.geojson
(+501 files in other folders)
