[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tb-amr-dashboard"
version = "2.0.0"
description = "Interactive TB-AMR Intelligence Platform for India"
requires-python = ">=3.9"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*"]
